syntax = "proto3";

package notes;

service NoteService {
    rpc listNote (Empty) returns (NoteList) {}
    rpc insertNote (Note) returns (Note) {}
}

message Empty {}

message Note {
    string id = 1;
    string title = 2;
    string content = 3;
}

message NoteList {
   repeated Note notes = 1;
}